[package]
name = "liquid_crystal_ui"
version = "0.1.0"
edition = "2024"
authors = ["itscrystalline <real@iw2tryhard.dev>"]
description = "An embedded UI library for displaying to alphanumeric LCD displays."
license = "MIT"
repository = "https://github.com/RecursiveError/liquid_crystal"
keywords = ["lcd", "liquidcrystal", "HD44780", "embedded-hal", "tui"]
categories = ["embedded", "no-std"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
embedded-hal = "1.0"
embedded-hal-async = { version = "1.0", optional = true }
heapless = { version = "0.9.2", optional = true }
liquid_crystal = { version = "0.2.0", optional = true }
log = { version = "0.4.29", optional = true }
num-traits = { version = "0.2.19", default-features = false }
thiserror = { version = "2.0.18", default-features = false }

[features]
# default = ["async", "log", "heapless", "liquid_crystal_driver"] # dont forget to remove this vro
# default = ["async", "log", "alloc", "liquid_crystal_driver"] # dont forget to remove this vro
default = []

async = ["dep:embedded-hal-async", "liquid_crystal?/async"]
alloc = []
heapless = ["dep:heapless"]
log = ["dep:log"]
liquid_crystal_driver = ["dep:liquid_crystal"]

